fix(Projects, index.css): update overflow properties for improved layout and prevent unwanted scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,6 @@ body {
   color: white;
   font-family: "Roboto", sans-serif;
   overflow: hidden;
-  overflow-y: hidden;
-  overflow-x: hidden;
 }
 
 .priColor {
